# sqlc-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  schema.sql
sqlc/: Cargo.toml
sqlc-macros/: Cargo.toml
sqlc-macros/src/: lib.rs
sqlc-macros/tests/: codegen.rs
sqlc-parser/: Cargo.toml
sqlc-parser/src/: lib.rs
sqlc-parser/tests/: parser.rs  queries.rs
sqlc/src/: lib.rs
