[workspace]
resolver = "3"

members = [
    "sqlc",
    "sqlc-macros"
, "sqlc-parser"]

[workspace.dependencies]
sqlparser = "0.58.0"
uuid = "1.17.0"
syn = "2.0.104"
proc-macro2 = "1.0.95"
quote = "1.0.40"
chrono = "0.4.41"
sqlc-parser = {path = "sqlc-parser"}

[workspace.dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "sqlite",
    "mysql",
    "derive",
    "uuid",
    "chrono"
]